styles.css
.page-container {
    display: flex;
    width: 100vw;
    font-family: 'Open Sans', sans-serif;
}

.wrapper {
    display: flex;
    flex-flow: row wrap;
    width: 100%;
}
/* Styling for left navigation sidebar */

.nav-container {
    background: #374050;
    color: #8c94a7;
    font-size: 1em;
    min-width: 12rem;
    width: 12rem;
}

.name-picture-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.portrait {
    margin-top: 2em;
    width: 5rem;
    height: 5rem;
    border-radius: 100%;
}

.name {
    color: #8c94a7;
    text-align: center;
    cursor: pointer;
}

.down-arrow {
    width: .75em;
    height: .5em;
}

.nav-btn {
    width: 1em;
    height: 1em;
    padding-right: .4em;
    cursor: pointer;
}

.nav-btn:hover {
    color: #e1e8ef;
}

.main-nav {
    border-top: solid;
    border-top-color: #2c3749;
    border-bottom: solid;
    border-bottom-color: #2c3749;
}

.admin-nav {
    border-bottom: solid;
    border-bottom-color: #2c3749;
}

.leftside-nav-list {
    list-style-type: none;
    margin: 0 0 0 2rem;
    padding: 0;
}

.leftside-nav-list li:hover {
    border-left: solid;
    border-left-color: #15adf8;
    background-color: #30394a;
    color: #e1e8ef;
}

li {
    cursor: pointer;
    width: 100%;
}

.categories-nav li:hover {
    border: none;
}

/* Styling for top search section */

.search-container {
    background-color: blue;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    width: 100%;
    height: 3.8rem; 
}

.search-btn-left {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 5rem;
}

.hamburger-btn {
    width: 1.6rem;
    height: 1.6rem;
}

.search-btn-left:hover {
    background-color: #14a4fa;
    cursor: pointer;
}

.search-input {
    width: 100%;
    background-image: url(/images/search.svg);
    background-repeat: no-repeat;
    background-size: 1em;
    background-position: 1em;
    padding-left: 3rem;
}

.search-btn-right {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 5rem;
}

.search-btn-right:hover {
    background-color: #14a4fa;
    cursor: pointer;
}

.top-right-btn {
    width: 1.3rem;
    height: 1.3rem;
}

/*Job title display section*/

.job-title-container {
    background-color:#ffffff;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    color: #5a595f;
    width: 100%;
    height: 8.5rem;
}

a {
    text-decoration: none;
    color: #63b5e1;
}

.job-header-and-btns {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.job-title-header {
    display: flex;
    flex-direction: column;
    font-size: .7rem;
}

.job-title-location-preview {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 16rem;
}

.job-title {
    margin-left: 1.75rem;
}

.location-icon {
    width: .75rem;
    height: .75rem;
    padding-right: .25rem;
    cursor: pointer;
}

.location {
    width: 7rem;
    height: 1rem;
}

.location-dot-seperate {
    width: .15rem;
    height: .15rem;
    padding: 0 .4rem 0 .1rem;
}

.job-title-btns {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    margin-right: 1.3rem;
    width: 11rem;
}

.job-title-nav {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    cursor: pointer;
    padding: 0;
    margin: 0 0 0 .75rem;
}

.job-title-nav li:hover {
    font-weight: bold;
    border-bottom: solid;
    border-bottom-color: #42b2f1;
}

.job-title-nav li {
    margin: 0 3rem 0 1rem;
    padding-bottom: .75rem;
}
.open-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    width: 3.5rem;
    height: 1.5rem;
    padding: 0;
    cursor: pointer;
    font-size: .5rem;
    font-weight: bold;
    -moz-border-radius:28px;
	-webkit-border-radius:28px;
}

.green-dot {
    width: .5rem;
    padding-right: .3rem;
}

.job-btns {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    width: 1.5rem;
    height: 1.5rem;
    cursor: pointer;
    padding: 0;
}

.job-btns-icon {
    width: .65rem;
}

/* Graphs */

.graph-container {
    display: flex;
    flex-direction: row;
    align-items: space-evenly;
    background-color: #ecf1f6;
    width: 100%;
    height: 20rem;
}

.bar-graph-and-button {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.circle-chart__circle {
    width: 5rem;
}

.bar-graph {
    width: 25em;
    height: 15em;
}

.circle-chart__circle {
    animation: circle-chart-fill 2s reverse; /* 1 */ 
    transform: rotate(89deg); /* 2, 3 */
    transform-origin: center; /* 4 */
}
  
.circle-chart__circle--negative {
    animation: circle-chart-fill 2s reverse;
    transform: rotate(90deg); /* 1, 2, 3 */
}
  
.circle-chart__info {
    animation: circle-chart-appear 2s forwards;
    opacity: 0;
    transform: translateY(0.3em);
}
  
@keyframes circle-chart-fill {
    to { stroke-dasharray: 0 100; }
}
  
@keyframes circle-chart-appear {
    to {
      opacity: 1;
      transform: translateY(0);
    }
}
  
.graph-circle-grid {
    display: flex;
    flex-direction: row;
    margin: 2.5em 0 0 0;

}

.circle-graph-and-btn {
    display: flex;
    flex-direction: column;
    width: 43rem;
    margin-right: 0;
    align-items: center;
}

.circle-graph-btn {
    text-align: center;
    
}

.total-btn {
    border-radius: 50%;
    width: 15rem;
    height: 2rem;
    font-size: .75rem;
    font-weight: bold;
    color: #6e7179;
    cursor: pointer;
    -moz-border-radius:28px;
    -webkit-border-radius:28px;
    padding: 0;
}

.applicants-btn {
    border-radius: 50%;
    width: 15rem;
    height: 2rem;
    font-size: .75rem;
    font-weight: bold;
    color: #6e7179;
    cursor: pointer;
    -moz-border-radius:28px;
    -webkit-border-radius:28px;
    padding: 0;
}

/* Dividing Line Between Graphs and Job Description */

.divide-line {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: #ecf1f6;
    
}
.divide-btn {
    background-color: #fcfcfc;
    border-radius: 50%;
    width: 1.5rem;
    height: 1.5rem;
    cursor: pointer;
}

.divide-btns-icon {
    width: .55rem;
}

.static-line-with-button1 {
    width: 100%;
    height: 0;
    display: flex;
    flex-direction: row;
    border-bottom: solid;
    border-bottom-color: #dbe1e5;
}

.static-line-with-button2 {
    width: 100%;
    height: 0;
    display: flex;
    flex-direction: row;
    border-bottom: solid;
    border-bottom-color: #dbe1e5;
}
  /* Job Description Section */

.bottom-container {
      display: flex;
      flex-flow: row wrap;
      justify-content: space-evenly;
      width: 100%;
      background-color: #ecf1f6;
  }

.job-description-container {
    background-color: #ecf1f6;
    width: 50%;
    height: 52rem;
    padding-left: 3%;
    margin-top: 3rem;
}

.jobtitle-and-edit {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: #6f7e95;
    color: #e1e9f6;
    padding-left: 1rem;
}

.edit-btn {
    background-color: #7b8aa1;
    border: none;
    color: #e1e9f6;
    height: 1.5rem;
    font-size: .5rem;
    margin-left: 2rem;
}

.job-info-container {
    background-color: #fff;
    padding-left: 1rem;
}

.position-title-container {
    display: flex;
    flex-direction: row;
}

.position-title-container p {
    margin-left: 2.5rem;
}

.job-location {
    display: flex;
    flex-direction: row;
}

.job-location p {
    margin-left: 4rem;
}

.employment-type {
    display: flex;
    flex-direction: row;
}

.employment-type p {
    margin-left: 1rem;
}

.experience-level {
    display: flex;
    flex-direction: row;
}

.experience-level p {
    margin-left: 3.2rem;
}

.job-status {
    display: flex;
    flex-direction: row;
}

.job-status p {
    margin-left: 4.5rem;
}

.job-description-info {
    display: flex;
    flex-direction: row;
}

.job-description-info p {
    margin-left: 2.6rem;
}

.hiring-contact {
    display: flex;
    flex-direction: row;
}

.hiring-contact img {
    margin-left: 2.6rem;
}

.hiring-contact p {
    margin-left: 1.3rem;
}

.salary-container {
    display: flex;
    flex-direction: row;
}

.salary-container p{
    margin-left: .5rem;
}

.hiring-picture-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.portrait2 {
    width: 3rem;
    height: 3rem;
    border-radius: 100%;
}


/* Links Section */

.links-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #ecf1f6;
    width: 30%;
    margin-top: 3rem;
    height: 52rem;
}

.link-button-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 9rem;
}

.link-btn1 {
    background-color: #4a6ec1;
    width: 15rem;
    height: 2.5rem;
    color: #dae7f5
}

.link-btn2 {
    background-color: #03aaef;
    width: 15rem;
    height: 2.5rem;
    color: #dae7f5;
}

.link-btn3 {
    background-color: #0482bd;
    width: 15rem;
    height: 2.5rem;
    color: #dae7f5;
}

.facebook-btn {
    width: 1rem;
    height: 1rem;
}

.twitter-btn {
    width: 1rem;
    height: 1rem;
}

.linkedin-btn {
    width: 1rem;
    height: 1rem;
}

.link-copy-btns {
    background-color: #43bac2;
    color: #c9e0ee;

}

.copy-link-container {
    display: flex;
    flex-direction: row;
}

/* MEDIA QUERIES */

@media (max-width: 1360px) {
.wrapper {
        margin: 0;
}
    
.nav-container {
        display: none;
}

.job-title-container {
        width: 100%;
}

.graph-container {
        width: 100%;
} 
}

